--- a/hillel/pom.xml
+++ b/hillel/pom.xml
@@ -29,6 +29,12 @@
             <artifactId>passwordGenerator</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.7.5</version>
+        </dependency>
 
 
 
