--- a/hillel/pom.xml
+++ b/hillel/pom.xml
@@ -100,5 +100,17 @@
             <artifactId>jackson-datatype-jsr310</artifactId>
             <version>2.19.0</version> <!-- Или более поздняя версия -->
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.springframework/spring-context -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>7.0.0-M6</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.springframework/spring-jdbc -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-jdbc</artifactId>
+            <version>6.2.8</version>
+        </dependency>
     </dependencies>
 </project>
